--- a/sass/_pygments.sass
+++ b/sass/_pygments.sass
@@ -55,7 +55,7 @@
 /* Punctuation */
 
 .cm
-  color: #000080
+  color: #337AB7
 
 /* Comment.Multiline */
 
